fix: overflow issue

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -43,7 +43,7 @@ svg {
 
 .tab__container {
   flex: 1;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .tab__btn__container {
@@ -82,6 +82,7 @@ svg {
   justify-content: center;
   align-items: center;
   padding: 6px 12px;
+  overflow-y: hidden;
 }
 
 .blocklist__info__container {
@@ -146,6 +147,8 @@ svg {
 .blocklist_list_container {
   flex: 1;
   width: 100%;
+  overflow-y: auto;
+  padding: 0 0 12px 0;
 }
 
 .blocklist__row {
